--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,11 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.calculator-container{
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.6rem;
+    width: 100%;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5), 0 1px 5px rgba(0, 0, 0, 0.5);
+    position: relative;  
+}
