--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,36 @@ button:nth-child(20){
     color: rgb(120, 120, 120);
     font-size: 1.2rem;
 }
+
+/*styling for the history section*/
+.display-history{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color:rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 100%;
+    border-radius: 0.6rem;
+    display: none;
+    padding-top: 36.5px;
+    background-color: #f4f4f4;
+  }
+
+  .display-history.active{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .display-history div{
+    width: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 20%;
+    height: 20vh;  
+  }
+
+  .display-history div ul{
+    list-style: none;
+}
