--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ header{
     border-bottom:rgb(226, 226, 226) 1px solid ;
     width: 100%;
     padding: 0.5rem 0.5rem 0 0.5rem;
+    position: relative;
 }
 
 .history{
@@ -79,6 +80,7 @@ header{
     justify-content: center;
     margin-bottom: 0.8rem;
     padding-top: 0.5rem;
+    
 
 }
 
@@ -102,7 +104,7 @@ header{
 }
 
 .screen-bottom-row{
-    font-size: 2rem;
+    font-size: 1.6rem;
     padding: 0.75rem 0.5rem 0.75rem 0.5rem;
     color: rgb(129, 129, 129);
     overflow: hidden;
@@ -204,4 +206,47 @@ button:nth-child(20){
 
   .display-history div ul{
     list-style: none;
+}
+
+.warning{
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 8;
+    box-shadow: 0 2px 5xp rgba(136, 136, 136, 0.8);
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
+    display: none;
+}
+
+.warning.active{
+    display: flex;
+}
+
+.warning-message{
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    padding-left: 1rem;
+    text-align: center;
+    font-weight: 700;
+}
+
+.warning-message .btn{
+    background-color: #f4f4f4;
+    outline: none;
+    border-radius: 0.3rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    /* height: 25px;
+    width: 25px; */
+    color: rgb(109, 109, 109);
+    /* box-shadow: 0 2px 3px rgba(255, 255, 255, 0.5); */
+    margin-top: 8px;
+    padding: 4px 4px;
+    cursor: pointer;
+
 }
