--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ header{
     position: relative;
 }
 
-.history{
+.calculator-history{
     padding-top: 0.2rem;
     padding-bottom: 0.5rem;
     justify-content: flex-end;
@@ -59,14 +59,26 @@ header{
 
 }
 
-.history-btn{
+.close-history-btn, .open-history-btn{
     padding-top: 0;
     padding-bottom: 0;
     background-color: transparent;
-    z-index: 99;
+    z-index: 5;
 }
 
-.history-btn:hover{
+.open-history-btn.deactivate{
+    display: none;
+}
+
+.close-history-btn{
+    display: none;
+}
+
+.close-history-btn.active{
+    display: flex;
+}
+
+.close-history-btn:hover, .open-history-btn:hover{
     background-color: transparent;
 }
 
@@ -176,41 +188,54 @@ button:nth-child(20){
 }
 
 /*styling for the history section*/
-.display-history{
+.display-calculator-history{
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
-    background-color:rgba(255, 255, 255, 0.8);
+    background-color: rgba(10, 10, 10, 0.9);
     width: 100%;
     height: 100%;
     border-radius: 0.6rem;
     display: none;
     padding-top: 36.5px;
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
+    gap: 4px;
   }
 
-  .display-history.active{
+  .display-calculator-history.active{
     display: flex;
     flex-direction: column;
   }
 
-  .display-history div{
+  .display-calculator-history div{
     width: inherit;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex: 1 1 20%;
+    justify-content: flex-start;
+    flex: 0 1 20%;
     height: 20vh;  
+    background-color: rgba(10, 10, 10, 0.7);
+    color: #f4f4f4;
+    padding-left: 2rem;
+    font-size: 1rem;
+    letter-spacing: 3px;
   }
 
-  .display-history div ul{
+  .display-calculator-history div:last-child{
+      border-bottom-left-radius: 0.6rem;
+      border-bottom-right-radius:0.6rem ;
+  }
+  
+
+  .display-calculator-history div ul{
+      line-height: 1.5;
     list-style: none;
 }
 
 .warning{
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
     top: 0;
     left: 0;
     bottom: 0;
